--- a/Linux/ags/style.scss
+++ b/Linux/ags/style.scss
@@ -1,18 +1,18 @@
 * {
-  font-family: Noto Sans;
-  font-size: 16px;
+    font-family: Noto Sans;
+    font-size: 16px;
 }
 window {
-  background-color: transparent;
+    background-color: transparent;
 }
 .transparent {
-  background-color: transparent;
+    background-color: transparent;
 }
 button.base {
-  padding: 0;
-  min-width: 0;
-  min-height: 0;
-  border-radius: 0;
-  font-weight: normal;
-  background-color: rgba(0,0,0,0);
+    padding: 0;
+    min-width: 0;
+    min-height: 0;
+    border-radius: 0;
+    font-weight: normal;
+    background-color: rgba(0, 0, 0, 0);
 }
