updated ags and hypr stuff

--- a/Linux/ags/shell/bar/bar.scss
+++ b/Linux/ags/shell/bar/bar.scss
@@ -11,7 +11,7 @@ label.icon {
     padding: 0 8px;
 }
 .pill {
-    background-color: #28282b;
+    background-color: #28282b22;
     border: 2px solid #00ddff;
     border-radius: 16px;
     padding: 0 12px;
